# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh:
  Fix two calls to set_config_with_override on CMD_KERNCACHE and some
  indentation weirdness

  04 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/initrd.scripts:
  Change &>/dev/null to >/dev/null 2>&1 because busybox ash sucks

  04 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/initrd.scripts,
  generic/linuxrc:
  Switch to double quotes where we're interpolating variables, because I suck

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> sparc64/modules_load:
  Add qla2xxx to sparc64's MODULES_SCSI

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
  gen_determineargs.sh, gen_moddeps.sh:
  Add --all-initrd-modules option to copy all kernel modules into
  initrd/ramfs. This is useful for netboot images

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/initrd.scripts,
  generic/linuxrc:
  Add setup_hotplug() function that runs before the modules are loaded to
  setup mdev as the hotplug event handler. Add $KV to /lib/modules anywhere it
  occurs to allow for an initramfs with multiple sets of modules

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_configkernel.sh,
  genkernel.conf:
  Clean up OLDCONFIG logic and default to OLDCONFIG=yes. This is for bug 207895

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc:
  Moving the code to start resume operations so it doesn't run when booting
  from CD. We also don't execute the code if there's no real_resume set on the
  command line, since it will fail, anyway, without it.

  02 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> alpha/modules_load,
  ia64/modules_load, ppc/modules_load, ppc64/modules_load, um/modules_load,
  x86/modules_load, x86_64/modules_load, xen0/modules_load,
  xenU/modules_load:
  add megaraid module to MODULES_SCSI for bug 206039
