@@ -211,17 +211,6 @@ parse_cmdline() {
 			echo
 			print_warning 1 "Please use --evms, as --evms2 is deprecated."
 			;;
-		--unionfs)
-			CMD_UNIONFS=1
-			print_info 2 "CMD_UNIONFS: ${CMD_UNIONFS}"
-			echo
-			print_warning 1 "WARNING: unionfs support is in active development and is not meant for general"
-			print_warning 1 "use."
-			print_warning 1 "Bug Reports without patches/fixes will be ignored."
-			print_warning 1 "Use at your own risk as this could blow up your system."
-			print_warning 1 "This code is subject to change at any time."
-			echo
-			;;
 		--lvm)
 			CMD_LVM=1
 			print_info 2 "CMD_LVM: ${CMD_LVM}"
