@@ -81,33 +81,6 @@ do
 		looptype\=*)
 			LOOPTYPE=`parse_opt "${x}"`
 		;;
-		unionfs)
-			if [ ! -x /sbin/unionctl ]
-			then
-				USE_UNIONFS_NORMAL=0
-				bad_msg 'Unionctl not found: aborting use of unionfs!'
-			else
-				USE_UNIONFS_NORMAL=1
-			fi
-		;;
-		unionfs\=*)
-			if [ ! -x /sbin/unionctl ]
-			then
-				USE_UNIONFS_NORMAL=0
-				bad_msg 'Unionctl not found: aborting use of unionfs!'
-			else
-				USE_UNIONFS_NORMAL=1
-				CMD_UNIONFS=`parse_opt "${x}"`
-				echo ${CMD_UNIONFS}|grep , >/dev/null 2>&1
-				if [ "$?" -eq '0' ]
-				then
-					UID=`echo ${CMD_UNIONFS#*,}`
-					UNIONFS=`echo ${CMD_UNIONFS%,*}`
-				else
-					UNIONFS=${CMD_UNIONFS}
-				fi
-			fi
-		;;
 		# Start Volume manager options 
 		dolvm)
 			USE_LVM_NORMAL=1
@@ -274,27 +247,16 @@ then
 	fi
 fi
 
-# Set up unionfs
 mkdir -p ${NEW_ROOT}
-setup_unionfs
-
-if [ "${USE_UNIONFS_NORMAL}" = '1' ]
-then
-	CHROOT=${UNION}
-else
-	CHROOT=${NEW_ROOT}
-fi
+CHROOT=${NEW_ROOT}
 
 # Run debug shell if requested
 rundebugshell
 
 if [ "${CDROOT}" = '1' ]
 then
-	if [ ! "${USE_UNIONFS_NORMAL}" = '1' ]
-	then
-		good_msg "Making tmpfs for ${NEW_ROOT}"
-		mount -t tmpfs tmpfs ${NEW_ROOT}
-	fi
+	good_msg "Making tmpfs for ${NEW_ROOT}"
+	mount -t tmpfs tmpfs ${NEW_ROOT}
 	
 	for i in dev mnt mnt/cdrom mnt/livecd mnt/key tmp tmp/.initrd mnt/gentoo sys
 	do
@@ -608,15 +570,6 @@ then
 # End cdrom looptype determination and mounting if necessary
 #
 
-	if [ "${USE_UNIONFS_NORMAL}" = '1' ]
-	then
-		union_insert_dir ${UNION} ${NEW_ROOT}/${FS_LOCATION}
-		
-		# Make sure fstab notes livecd is mounted ro.  Makes system skip remount which fails on unionfs dirs.
-		sed -e 's|\(.*\s/\s*tmpfs\s*\)defaults\(.*\)|\1defaults,ro\2|' /${UNION}/etc/fstab > /${UNION}/etc/fstab.new
-		mv /${UNION}/etc/fstab.new /${UNION}/etc/fstab
-	fi
-
 	# Unpacking additional packages from NFS mount
 	# This is useful for adding kernel modules to /lib
 	# We do this now, so that additional packages can add whereever they want.
@@ -634,59 +587,56 @@ then
 	fi
 
 	
-	if [ "${USE_UNIONFS_NORMAL}" != '1' ]
-	then
-		good_msg "Copying read-write image contents to tmpfs"
-		# Copy over stuff that should be writable
-		(cd ${NEW_ROOT}/${FS_LOCATION}; cp -a ${ROOT_TREES} ${NEW_ROOT})
+	good_msg "Copying read-write image contents to tmpfs"
+	# Copy over stuff that should be writable
+	(cd ${NEW_ROOT}/${FS_LOCATION}; cp -a ${ROOT_TREES} ${NEW_ROOT})
 
-		# Now we do the links.
-		for x in ${ROOT_LINKS}
-		do
-			if [ -L "${NEW_ROOT}/${FS_LOCATION}/${x}" ]
-			then
-				ln -s "`readlink ${NEW_ROOT}/${FS_LOCATION}/${x}`" "${x}" 2>/dev/null
-			else
-				# List all subdirectories of x
-				find "${NEW_ROOT}/${FS_LOCATION}/${x}" -type d 2>/dev/null | while read directory
-				do
-					## Strip the prefix of the FS_LOCATION
-					directory=${directory#${NEW_ROOT}/${FS_LOCATION}/}
-
-					## Skip this directory if we already linked a parent directory
-					if [ "${curent_parrent}" != '' ]; then
-						var=`echo "${directory}" | grep "^${curent_parrent}"`
-						if [ "${var}" != '' ]; then
-							continue
-						fi
-					fi
-					## Test if the directory exists already
-					if [ -e "/${NEW_ROOT}/${directory}" ]
-					then
-						# It does exist, link all the individual files
-						for file in `ls /${NEW_ROOT}/${FS_LOCATION}/${directory}`
-						do
-						if [ ! -d "/${NEW_ROOT}/${FS_LOCATION}/${directory}/${file}" ] && [ ! -e "${NEW_ROOT}/${directory}/${file}" ]; then
-								ln -s "/${FS_LOCATION}/${directory}/${file}" "${directory}/${file}" 2> /dev/null
-							fi
-						done
-					else
-						# It does not exist, make a link to the livecd
-						ln -s "/${FS_LOCATION}/${directory}" "${directory}" 2>/dev/null
-						current_parent=${directory}
-					fi
-				done
-			fi
-		done
-
-		if [ "${DO_slowusb}" ] || [ "${FORCE_slowusb}" ]
+	# Now we do the links.
+	for x in ${ROOT_LINKS}
+	do
+		if [ -L "${NEW_ROOT}/${FS_LOCATION}/${x}" ]
 		then
-			sleep 10
+			ln -s "`readlink ${NEW_ROOT}/${FS_LOCATION}/${x}`" "${x}" 2>/dev/null
+		else
+			# List all subdirectories of x
+			find "${NEW_ROOT}/${FS_LOCATION}/${x}" -type d 2>/dev/null | while read directory
+			do
+				## Strip the prefix of the FS_LOCATION
+				directory=${directory#${NEW_ROOT}/${FS_LOCATION}/}
+
+				## Skip this directory if we already linked a parent directory
+				if [ "${curent_parrent}" != '' ]; then
+					var=`echo "${directory}" | grep "^${curent_parrent}"`
+					if [ "${var}" != '' ]; then
+						continue
+					fi
+				fi
+				## Test if the directory exists already
+				if [ -e "/${NEW_ROOT}/${directory}" ]
+				then
+					# It does exist, link all the individual files
+					for file in `ls /${NEW_ROOT}/${FS_LOCATION}/${directory}`
+					do
+					if [ ! -d "/${NEW_ROOT}/${FS_LOCATION}/${directory}/${file}" ] && [ ! -e "${NEW_ROOT}/${directory}/${file}" ]; then
+							ln -s "/${FS_LOCATION}/${directory}/${file}" "${directory}/${file}" 2> /dev/null
+						fi
+					done
+				else
+					# It does not exist, make a link to the livecd
+					ln -s "/${FS_LOCATION}/${directory}" "${directory}" 2>/dev/null
+					current_parent=${directory}
+				fi
+			done
 		fi
-		mkdir initrd proc tmp sys 2>/dev/null
-		chmod 1777 tmp
+	done
+
+	if [ "${DO_slowusb}" ] || [ "${FORCE_slowusb}" ]
+	then
+		sleep 10
 	fi
-	
+	mkdir initrd proc tmp sys 2>/dev/null
+	chmod 1777 tmp
+
 	#UML=`cat /proc/cpuinfo|grep UML|sed -e 's|model name.*: ||'`
 	#if [ "${UML}" = 'UML' ]
 	#then
@@ -701,12 +651,6 @@ then
 	then
 		sleep 10
 	fi
-else
-	if [ "${USE_UNIONFS_NORMAL}" = '1' ]
-	then
-		union_insert_dir ${UNION} ${NEW_ROOT}
-		mkdir -p ${UNION}/tmp/.initrd
-	fi
 fi
 
 # Execute script on the cdrom just before boot to update things if necessary
@@ -719,16 +663,6 @@ then
 fi
 
 verbose_kmsg
-
-# Move the /memory mount point to what will be the system root so that 
-# init scripts will be able to unmount it properly at next reboot
-#
-# Eventually, all "unions over /" mounts should go in that /.unions/
-if [ "${USE_UNIONFS_NORMAL}" = '1' ]
-then
-	mkdir -p /${CHROOT}/.unions/memory 2>/dev/null
-	mount -o move /memory /${CHROOT}/.unions/memory || echo '*: Failed to move unionfs /memory into the system root!'
-fi
 
 if [ "$0" = '/linuxrc' ] || [ "$0" = 'linuxrc' ]
 then
