@@ -59,10 +59,6 @@ USECOLOR="yes"
 # should run "emerge evms" first.
 # EVMS="no"
 
-# UnionFS support.  Under active development.  Do not use unless you are working
-# on developing this feature.
-# UNIONFS="no"
-
 # Add DMRAID support.
 # DMRAID="no"
 
@@ -161,14 +157,6 @@ DMRAID_VER="VERSION_DMRAID"
 DMRAID_DIR="dmraid/${DMRAID_VER}"
 DMRAID_SRCTAR="${GK_SHARE}/pkg/dmraid-${DMRAID_VER}.tar.bz2"
 DMRAID_BINCACHE="%%CACHE%%/dmraid-${DMRAID_VER}-%%ARCH%%.tar.bz2"
-
-# Kernel Version Compatibility
-# (from http://www.am-utils.org/project-unionfs.html)
-UNIONFS_VER="VERSION_UNIONFS"
-UNIONFS_DIR="unionfs-${UNIONFS_VER}"
-UNIONFS_SRCTAR="${GK_SHARE}/pkg/unionfs-${UNIONFS_VER}.tar.gz"
-UNIONFS_BINCACHE="%%CACHE%%/unionfs-${UNIONFS_VER}-tools-%%ARCH%%.tar.bz2"
-UNIONFS_MODULES_BINCACHE="%%CACHE%%/unionfs-${UNIONFS_VER}-modules-%%KV%%-%%ARCH%%.tar.bz2"
 
 E2FSPROGS_VER="VERSION_E2FSPROGS"
 E2FSPROGS_DIR="e2fsprogs-${E2FSPROGS_VER}"
