@@ -12,7 +12,6 @@ COMPRESS_INITRD="yes"
 USECOLOR="yes"
 NOINITRDMODULES="yes"
 BUSYBOX=1
-UNIONFS=0
 DMRAID=0
 DISKLABEL=0
 
