@@ -2,6 +2,13 @@
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
+  gen_compile.sh, gen_determineargs.sh, gen_initramfs.sh, gen_initrd.sh,
+  generic/initrd.scripts, generic/linuxrc, genkernel, genkernel.conf,
+  mips/config.sh:
+  This is the long-awaited unionfs code cleanup. All of the unionfs code in
+  genkernel has been removed.
+
   07 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh:
   Fix two calls to set_config_with_override on CMD_KERNCACHE and some
   indentation weirdness
